--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=pizza_shop
+      - POSTGRES_DB=pizzashop
     volumes:
-      - postgres_data:/bitnami/postgresql
+      - pizzashop_pg_data:/bitnami/postgresql
 
 volumes:
-  postgres_data:
+  pizzashop_pg_data:
