--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "lint": "eslint --fix src --ext ts"
   },
   "dependencies": {
-    "@elysiajs/cookie": "^0.8.0",
-    "@elysiajs/jwt": "^0.8.0",
+    "@elysiajs/jwt": "^1.0.2",
     "@paralleldrive/cuid2": "^2.2.2",
-    "dayjs": "^1.11.10",
-    "drizzle-orm": "^0.29.3",
-    "elysia": "^0.8.17",
-    "nodemailer": "^6.9.11",
-    "postgres": "^3.4.3",
-    "zod": "^3.22.4"
+    "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.31.2",
+    "elysia": "^1.0.25",
+    "nodemailer": "^6.9.14",
+    "postgres": "^3.4.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@rocketseat/eslint-config": "^2.2.2",
-    "@types/bun": "latest",
-    "@types/nodemailer": "^6.4.14",
+    "@types/bun": "^1.1.6",
+    "@types/nodemailer": "^6.4.15",
+    "@types/pg": "^8.11.6",
     "chalk": "^5.3.0",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.56.0",
+    "drizzle-kit": "^0.22.8",
+    "eslint": "^9.6.0",
     "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.11.3"
+    "pg": "^8.12.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.2"
   }
 }
