--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.31.2",
+    "drizzle-typebox": "^0.1.1",
     "elysia": "^1.0.25",
     "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
